# django-schema-browser

./: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml
django_schema_browser/: __init__.py  apps.py  i18n.py  introspection.py  models.py  urls.py  views.py
django_schema_browser/locale/en/LC_MESSAGES/: django.mo  django.po
django_schema_browser/locale/fr/LC_MESSAGES/: django.mo  django.po
django_schema_browser/templates/django_schema_browser/: app_models.html  base.html  home.html  model_detail.html
django_schema_browser/templatetags/: __init__.py  django_schema_browser_i18n.py
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
