[project]
name = "django-schema-browser"
version = "0.1.0"
description = ""
authors = [
    {name = "elapouya@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (<6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
