[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django_schema_browser"
version = "0.1.3"
description = "Browse Django apps, models, fields, and reverse relations from a dedicated frontend."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "Elapouya", email = "elapouya@proton.me" }
]
requires-python = ">=3.10"
dependencies = [
  "Django>=4.2,<7.0",
  "setuptools (>=82.0.0,<83.0.0)",
  "build (>=1.4.0,<2.0.0)",
  "twine (>=6.2.0,<7.0.0)"
]
keywords = ["django", "schema", "models", "introspection", "database"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/elapouya/django-schema-browser"
Repository = "https://github.com/elapouya/django-schema-browser"
Issues = "https://github.com/elapouya/django-schema-browser/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["django_schema_browser*"]

[tool.setuptools.package-data]
django_schema_browser = [
  "templates/**/*.html",
  "locale/*/LC_MESSAGES/*.po",
  "locale/*/LC_MESSAGES/*.mo",
]
